Added short Introduction

--- a/doc/Plichtenheft/sections/Einleitung.tex
+++ b/doc/Plichtenheft/sections/Einleitung.tex
@@ -1,3 +1,4 @@
 \section{Einleitung}
 
 \subsection{Zweck}
+In diesem Dokument werden die Anforderungen, die im Projekt Cryptoverter umgesetzt werden müssen, beschrieben.
