--- a/doc/Plichtenheft/Pflichtenheft.tex
+++ b/doc/Plichtenheft/Pflichtenheft.tex
@@ -11,6 +11,6 @@
 	
 	\input{sections/Einleitung}
 	\input{sections/Beschreibung}
-	\input{sections/Anforderungen}
+	\input{sections/Funktionale Anforderungen}
 	\input{sections/Referenzen}
 \end{document}
