--- a/doc/Plichtenheft/sections/FunktionaleAnforderungen.tex
+++ b/doc/Plichtenheft/sections/FunktionaleAnforderungen.tex
@@ -6,4 +6,8 @@ Das GUI (Graphical-User-Interface) besteht aus zwei Textboxen, einem Drop-Down M
 \subsection{Backend}
 Es soll ein Algorithms entwickelt werden, der ein Text verschlüsselt. Die Verschlüsselungs-Art wird durch die Benutzereingabe beim Drop-Down Menu bestimmt. Es stehen folgende Verschlüsselungen zur Auswahl:\\
 
-$\dot{Must-Have:}$
+$Must-Have:$\\
+Caesar-Verschlüsselung\\
+"TODO: Verschlüsselung finden"\\
+
+$Nice-to-Have:$\\
